# mpes-tools

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.cspell/: custom-dictionary.txt
.github/workflows/: linting.yml  release.yml  testing_coverage.yml  testing_multiversion.yml
src/mpes_tools/: Arpes_gui.py  Drawwindow.py  Gui_3d.py  Gui_3d_v2.py  Main.py  __init__.py  additional_window.py  axis_editor.py  call_gui.py  colorscale_slider_handler.py  cursor_handler.py  dbclick_axis_exemple.py  dot_handler.py  double_click_handler.py  fi_panel6.py  fit_panel.py  fit_panel_single.py  graphs.py  h5toxarray.py  hdf5.py  k_path_4d_4.py  make_model.py  movable_vertical_cursors_graph.py  right_click_handler.py  show_4d_window.py
src/mpes_tools/guis/: gui_3D.py  gui_4D.py  gui_fitting.py
src/mpes_tools/tools/: make_model.py
tests/: Arpes_gui.py  Drawwindow.py  additional_window.py  color_scale.py  fit_panel6.py  fit_panel_signle_test.py  h5toxarray.py  k_path_4d_4.py  test_guis.py
tutorials/: Fourier_FM.ipynb  Fourier_FM_2.ipynb  bi_exponential_second.py  cursors.py  cursors_FFT_2.py  data_osc.ipynb  fit_beforeFFT.py  get_oscillations.py  oscillation_decay_lmfit.py  save_data.py  template.ipynb
